# pd-onnx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  model.onnx  onnx-help.pd  onnx.cpp  py.train.pd_py  train.pd
.github/workflows/: cpp.yml
resources/: manim-animations.py  model.onnx  model3.onnx  onnx-help.pd  test.py  tiny-model.py  train.pd  train.py  tree0.dot  tree1.dot  tree2.dot
src/: onnx.cpp
